working input field

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvasinput": "^1.2.7",
     "express": "^4.16.4",
     "socket.io": "^2.2.0"
   }
